# progetto-PCS

./: .gitignore  CMakeLists.txt  README.md  scelte.md
input/: 01_semplice.txt  02_due_maglie.txt  03_ladder.txt  04_complesso.txt  05_mega.txt  Netlist
source/: main.cpp
source/algos/cycles/: dfs_based.hpp
source/algos/solver/: build_matrix.hpp  calc_voltage.hpp  gradiente_coniugato.hpp
source/algos/visit/: graph_visit.hpp  queue.hpp  stack.hpp
source/parser/: CMakeLists.txt  parser.cpp  parser.hpp
source/unidirected_graph/: component.hpp  unidirected_edge.hpp  unidirected_graph.hpp
